gcc/testsuite/rust/rustc/ui/error-codes/E0565.rs
// repr currently doesn't support literals
#[repr("C")] // { dg-error ".E0565." "" { target *-*-* } }
struct A {}

fn main() {}

